--- a/www-root/index.html
+++ b/www-root/index.html
@@ -2,15 +2,64 @@
 <html lang="sv">
     <head>
         <meta charset="utf-8"/>
-        
-        <meta http-equiv="refresh" content="0; url=SpecRunner.html" />
 
-        <title>Laboration 3, 1DV404 (Johnny Pesola)</title>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
+        <link rel="stylesheet" href="css/style.css">
+
+        <title>Gymnastiksystemet</title>
         <!--
             Author: Johnny Pesola
-            Date: @2014-12-16
+            Date: @2014-01-22
         -->
     </head>
     <body>
+        <div class="container">
+            <img class="logo" src="img/logo.png">
+
+            <div class="content">
+                <h1>Skapa tävlingstillfälle</h1>
+
+
+                <form class="white-box float-left">
+
+                    <h3>Skapa tävlingstillfälle</h3>
+                    Ange datum:
+                    <select>
+                        <option>2012</option>
+                    </select>
+
+                    <select>
+                        <option>10</option>
+                    </select>
+
+                    <select>
+                        <option>24</option>
+                    </select>
+
+                    <br>
+
+                    Starttid:
+                    <select>
+                        <option>10.15</option>
+                    </select>
+
+                    Sluttid:
+                    <select>
+                        <option>20.15</option>
+                    </select>
+
+                    <br>
+
+                    <button>Skapa</button>
+
+                </form>
+
+                <div class="white-box float-right">
+                    <h3>Tävlingstillfällen</h3>
+                    Inga tävlingstillfällen hittade.
+                </div>
+            </div>
+        </div>
     </body>
 </html>
