--- a/www-root/index.html
+++ b/www-root/index.html
@@ -165,6 +165,11 @@
 
                 </form>
 
+                <div class="white-box float-right hidden">
+                    <h3>Deltävlingar</h3>
+                    <div id="event-container"></div>
+                </div>
+
                 <div class="clear-fix"></div>
 
             </div>
