--- a/www-root/SpecRunner.html
+++ b/www-root/SpecRunner.html
@@ -16,8 +16,9 @@
   <script src="lib/jasmine-jquery/jasmine-jquery.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Event.js"></script>
-  <script src="src/Competition.js"></script>
+    <script src="src/Event.js"></script>
+    <script src="src/Competition.js"></script>
+    <script src="src/Page.js"></script>
 
   <!-- Configuration -->
   <script>
@@ -26,9 +27,10 @@
   </script>
 
   <!-- include spec files here... -->
-  <script src="spec/CompetitionSpec.js"></script>
-  <script src="spec/EventSpec.js"></script>
-  <script src="spec/IntegrationSpec.js"></script>
+    <script src="spec/CompetitionSpec.js"></script>
+    <script src="spec/EventSpec.js"></script>
+    <script src="spec/IntegrationSpec.js"></script>
+    <script src="spec/PageSpec.js"></script>
 
 </head>
 <body>
