--- a/www-root/index.html
+++ b/www-root/index.html
@@ -142,8 +142,8 @@
                     Junior<input type="radio" name="participants-type" value="junior" checked="checked">
                     Senior<input type="radio" name="participants-type" value="Senior">
                     <br>
-                    Män<input type="radio" name="participants-gender" value="male" checked="checked">
-                    Kvinnor<input type="radio" name="participants-gender" value="female">
+                    Män<input type="radio" name="participants-gender" value="man" checked="checked">
+                    Kvinnor<input type="radio" name="participants-gender" value="kvinna">
                     <br>
                     <br>
 
