--- a/www-root/SpecRunner.html
+++ b/www-root/SpecRunner.html
@@ -18,7 +18,7 @@
   <!-- include source files here... -->
     <script src="src/Event.js"></script>
     <script src="src/Competition.js"></script>
-    <script src="src/Page.js"></script>
+    <script src="src/CompetitionPage.js"></script>
 
   <!-- Configuration -->
   <script>
