--- a/www-root/competition.html
+++ b/www-root/competition.html
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="src/extensions.js"></script>
         <script type="text/javascript" src="src/Competition.js"></script>
         <script type="text/javascript" src="src/Event.js"></script>
-        <script type="text/javascript" src="src/Page.js"></script>
+        <script type="text/javascript" src="src/CompetitionPage.js"></script>
         <script type="text/javascript" src="src/main.js"></script>
 
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
