--- a/www-root/SpecRunner.html
+++ b/www-root/SpecRunner.html
@@ -15,10 +15,16 @@
   <script src="lib/jquery/jquery-2.1.1.min.js"></script>
   <script src="lib/jasmine-jquery/jasmine-jquery.js"></script>
 
+  <!-- Other dependencies -->
+    <script src="lib/cryptojs/rollups/sha256.js"></script>
+    <script src="src/extensions.js"></script>
+
   <!-- include source files here... -->
     <script src="src/Event.js"></script>
     <script src="src/Competition.js"></script>
     <script src="src/CompetitionPage.js"></script>
+    <script src="src/User.js"></script>
+    <script src="src/UserPage.js"></script>
 
   <!-- Configuration -->
   <script>
@@ -30,7 +36,9 @@
     <script src="spec/CompetitionSpec.js"></script>
     <script src="spec/EventSpec.js"></script>
     <script src="spec/IntegrationSpec.js"></script>
-    <script src="spec/PageSpec.js"></script>
+    <script src="spec/CompetitionPageSpec.js"></script>
+    <script src="spec/UserSpec.js"></script>
+    <script src="spec/UserPageSpecc.js"></script>
 
 </head>
 <body>
