--- a/www-root/competition.html
+++ b/www-root/competition.html
@@ -7,7 +7,7 @@
         <script type="text/javascript" src="src/Competition.js"></script>
         <script type="text/javascript" src="src/Event.js"></script>
         <script type="text/javascript" src="src/CompetitionPage.js"></script>
-        <script type="text/javascript" src="src/main.js"></script>
+        <script type="text/javascript" src="src/CompetitionMain.js"></script>
 
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
